Update mysql image to build off the mysql-base image

--- a/phusion/mysql/Dockerfile
+++ b/phusion/mysql/Dockerfile
@@ -1,9 +1,8 @@
-FROM phusion/baseimage:latest
+FROM alreece45/phusion-mysql-base:latest
 MAINTAINER Alexander Reece <alreece45@gmail.com>
 
-ENV HOME /root
-
-VOLUME /var/lib/mysql
+EXPOSE 3306 
+VOLUME ["/var/log/mysql", "/var/lib/mysql"]
 
 # Build packages first
 COPY ./packages.sh /build/packages.sh
@@ -12,8 +11,4 @@ RUN /build/packages.sh
 COPY ./mysql /build/mysql
 RUN /build/mysql/setup.sh 
 
-RUN rm -rf /build
-
 CMD ["/sbin/my_init"]
-
-EXPOSE 3306 
