[phusion-mysql-bootstrap:latest] Updated to share scripts with ubuntu-mysql-bootstrap:trusty image

--- a/phusion-latest/mysql-bootstrap/Dockerfile
+++ b/phusion-latest/mysql-bootstrap/Dockerfile
@@ -2,10 +2,10 @@ FROM alreece45/phusion-mysql-base:latest
 MAINTAINER Alexander Reece <alreece45@gmail.com>
 
 # Build packages first
-COPY ./packages.sh /build/packages.sh
+COPY ./ubuntu-trusty/packages.sh /build/packages.sh
 RUN /build/packages.sh
 
 # Copy the bootstrap files
-COPY ./mysql-bootstrap /opt/mysql-bootstrap
+COPY ./ubuntu-trusty/opt /opt/mysql-bootstrap
 
 CMD ["/opt/mysql-bootstrap/init"]
