[phusion-icinga2:latest] Update to share scripts with phusion-icinga2:trusty image

--- a/phusion-latest/icinga2/Dockerfile
+++ b/phusion-latest/icinga2/Dockerfile
@@ -4,11 +4,11 @@ MAINTAINER Alexander Reece <alreece45@gmail.com>
 ENV HOME /root
 
 # Install packages first
-COPY ./packages.sh /build/packages.sh
+COPY ./phusion-trusty/packages.sh /build/packages.sh
 RUN /build/packages.sh
 
 # Setup the packages
-COPY ./icinga2 /build/icinga2
+COPY ./phusion-trusty/icinga2 /build/icinga2
 RUN /build/icinga2/setup.sh
 
 VOLUME ["/etc/icinga2"]
