--- a/phusion-latest/nginx-php/Dockerfile
+++ b/phusion-latest/nginx-php/Dockerfile
@@ -4,13 +4,13 @@ MAINTAINER Alexander Reece <alreece45@gmail.com>
 ENV HOME /root
 
 # Build packages first
-COPY ./packages.sh /build/packages.sh
+COPY ./phusion-trusty/packages.sh /build/packages.sh
 RUN /build/packages.sh
 
-COPY ./nginx /build/nginx
+COPY ./phusion-trusty/nginx /build/nginx
 RUN /build/nginx/setup.sh
 
-COPY ./php-fpm /build/php-fpm
+COPY ./phusion-trusty/php-fpm /build/php-fpm
 RUN /build/php-fpm/setup.sh
 
 RUN rm -rf /build
