[ubuntu-mysql:trusty] Rename init script

--- a/mysql/mysql/ubuntu_trusty/Dockerfile
+++ b/mysql/mysql/ubuntu_trusty/Dockerfile
@@ -8,6 +8,6 @@ RUN /build/packages.sh
 COPY ./service /build/mysql
 RUN /build/mysql/setup.sh
 
-CMD ["/opt/docker-mysql/init"]
+CMD ["/opt/init-mysql.sh"]
 
 EXPOSE 3306
