[phusion-icinga2:trusty] Rename icinga2 directory (to setup)

--- a/icinga2/phusion_latest/Dockerfile
+++ b/icinga2/phusion_latest/Dockerfile
@@ -6,5 +6,5 @@ COPY ./phusion_trusty/packages.sh /build/packages.sh
 RUN /build/packages.sh
 
 # Setup the packages
-COPY ./phusion_trusty/icinga2 /build/icinga2
-RUN /build/icinga2/setup.sh
+COPY ./phusion_trusty/setup /opt/icinga2-setup
+RUN /opt/icinga2-setup/setup.sh
