[phusion-icinga2:*] Use the common/debian preinstall and postinstall scripts

--- a/icinga2/phusion_trusty/Dockerfile
+++ b/icinga2/phusion_trusty/Dockerfile
@@ -2,9 +2,9 @@ FROM phusion/baseimage:0.9.13
 MAINTAINER Alexander Reece <alreece45@gmail.com>
 
 # Install packages first
-COPY ./packages.sh /build/packages.sh
-RUN /build/packages.sh
+COPY ./installer /opt/icinga2-installer
+RUN /opt/icinga2-installer/install.sh
 
-# Setup the packages
+# Configure the service to start
 COPY ./setup /opt/icinga2-setup
 RUN /opt/icinga2-setup/setup.sh
