[ubuntu-mysql:trusty] Rename icinga2 directory (to setup)

--- a/mysql/mysql/ubuntu_trusty/Dockerfile
+++ b/mysql/mysql/ubuntu_trusty/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER Alexander Reece <alreece45@gmail.com>
 COPY ./packages.sh /build/packages.sh
 RUN /build/packages.sh
 
-COPY ./service /build/mysql
-RUN /build/mysql/setup.sh
+COPY ./setup /opt/mysql-setup
+RUN /opt/mysql-setup/setup.sh
 
 CMD ["/opt/init-mysql.sh"]
 
