[ubuntu-mysql:trusty] Move directory cleanup out of the setup

--- a/mysql/mysql/phusion_trusty/Dockerfile
+++ b/mysql/mysql/phusion_trusty/Dockerfile
@@ -6,7 +6,8 @@ COPY ./ubuntu_trusty/packages.sh /build/packages.sh
 RUN /build/packages.sh
 
 COPY ./setup /opt/mysql-setup
-RUN /opt/mysql-setup/setup.sh
+RUN /opt/mysql-setup/setup.sh \
+      && find /opt/mysql-setup -print -delete
 
 CMD ["/sbin/my_init"]
 
