--- a/mysql/mysql/phusion_latest/Dockerfile
+++ b/mysql/mysql/phusion_latest/Dockerfile
@@ -6,7 +6,8 @@ COPY ./phusion_trusty/ubuntu_trusty/packages.sh /build/packages.sh
 RUN /build/packages.sh
 
 COPY ./phusion_trusty/setup /opt/mysql-setup
-RUN /opt/mysql-setup/setup.sh
+RUN /opt/mysql-setup/setup.sh \
+      && find /opt/mysql-setup -print -delete
 
 CMD ["/sbin/my_init"]
 
