[ubuntu-mysql:*] Update installer to use common debian package scripts

--- a/mysql/mysql/phusion_trusty/Dockerfile
+++ b/mysql/mysql/phusion_trusty/Dockerfile
@@ -2,8 +2,8 @@ FROM alreece45/phusion-mysql-base:trusty
 MAINTAINER Alexander Reece <alreece45@gmail.com>
 
 # Build packages first
-COPY ./ubuntu_trusty/packages.sh /build/packages.sh
-RUN /build/packages.sh
+COPY ./installer /opt/mysql-installer
+RUN /opt/mysql-installer/install.sh
 
 COPY ./setup /opt/mysql-setup
 RUN /opt/mysql-setup/setup.sh \
