--- a/mysql/mysql/phusion_latest/Dockerfile
+++ b/mysql/mysql/phusion_latest/Dockerfile
@@ -2,8 +2,8 @@ FROM alreece45/phusion-mysql-base:latest
 MAINTAINER Alexander Reece <alreece45@gmail.com>
 
 # Build packages first
-COPY ./phusion_trusty/ubuntu_trusty/packages.sh /build/packages.sh
-RUN /build/packages.sh
+COPY ./phusion_trusty/installer /opt/mysql-installer
+RUN /opt/mysql-installer/install.sh
 
 COPY ./phusion_trusty/setup /opt/mysql-setup
 RUN /opt/mysql-setup/setup.sh \
