--- a/nginx/ubuntu_trusty/Dockerfile
+++ b/nginx/ubuntu_trusty/Dockerfile
@@ -2,10 +2,10 @@ FROM ubuntu:trusty
 MAINTAINER Alexander Reece <alreece45@gmail.com>
 
 # Build packages first
-COPY ./packages.sh /build/packages.sh
+COPY ./debian_wheezy/packages.sh /build/packages.sh
 RUN /build/packages.sh
 
-COPY ./service /build/nginx
+COPY ./debian_wheezy/service /build/nginx
 RUN ./build/nginx/setup.sh
 
 CMD ["/opt/init-nginx.sh"]
