[ubuntu-nginx-php:trusty] Update image to reuse debian setup scripts

--- a/nginx-php/ubuntu_trusty/Dockerfile
+++ b/nginx-php/ubuntu_trusty/Dockerfile
@@ -1,7 +1,7 @@
 FROM alreece45/ubuntu-nginx:trusty
 MAINTAINER Alexander Reece <alreece45@gmail.com>
 
-COPY ./service /build/nginx-php
+COPY ./debian_wheezy/service /build/nginx-php
 RUN /build/nginx-php/setup.sh
 
 CMD ["/opt/init-nginx-php.sh"]
